--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@commitlint/config-conventional": "^15.0.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
