--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,10 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react",
-        "@typescript-eslint"
+        "react"
     ],
     "rules": {
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "react/function-component-definition": [2, { "namedComponents": "function-declaration" }]
     }
 }
