--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "commit": "cz"
+    "commit": "cz",
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
     "@commitlint/config-conventional": "^15.0.0",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
@@ -30,7 +32,7 @@
   "husky": {
     "hooks": {
       "pre-push": "yarn lint",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "config": {
