--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@commitlint/config-conventional": "^15.0.0",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -17,6 +16,8 @@
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-plugin-styled-components": "^1.12.0",
