--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     ],
     "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "react/function-component-definition": [2, { "namedComponents": "function-declaration" }]
+      "react/function-component-definition": [2, { "namedComponents": "function-declaration" }],
+      "linebreak-style": ["error", "windows"]
     }
 }
