--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,6 @@
     "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "react/function-component-definition": [2, { "namedComponents": "function-declaration" }],
-      "linebreak-style": ["error", "windows"]
+      "linebreak-style": "off"
     }
 }
