--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "react/function-component-definition": [2, { "namedComponents": "function-declaration" }],
-      "linebreak-style": "off"
+      "linebreak-style": "off",
+      "react/jsx-no-bind": [0, {"allowFunctions": false}]
     }
 }
